# ChimeraEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: INTERNAL_REFERENCE.md  QA_CHECKLIST.md
presets/Synth/: Expressive Mono.chpatch  LFO Pan.chpatch  Saw.chpatch  Sine.chpatch  Square.chpatch  Stack.chpatch  Triangle.chpatch  Velocity Split.chpatch
samples/: LICENSES.csv
scripts/: audit_sample_licenses.py  fetch_approved_sample_sources.py  fetch_samples.py  generate_source_presets.py  generate_synth_samples.py  integrate_sample_sources.py  validate_build_artifacts.py  validate_presets.py
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Element.cpp  Element.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Lfo.cpp  Lfo.h  ModulationMatrix.cpp  ModulationMatrix.h  SamplePlayer.cpp  SamplePlayer.h  SampleZone.cpp  SampleZone.h
src/engine/: ArpLibrary.cpp  ArpLibrary.h  Arpeggiator.cpp  Arpeggiator.h  DrumKit.cpp  DrumKit.h  Performance.cpp  Performance.h  SampleLibrary.cpp  SampleLibrary.h  Sequencer.cpp  Sequencer.h  SequencerIO.cpp  SequencerIO.h  VoiceAllocator.cpp  VoiceAllocator.h
src/fx/: FxChain.cpp  FxChain.h
src/gui/: LookAndFeel.cpp  LookAndFeel.h
src/preset/: Preset.cpp  Preset.h  VoiceBank.cpp  VoiceBank.h
tests/: DspTests.cpp  ProcessorRenderTests.cpp
